--- a/pages/index.css
+++ b/pages/index.css
@@ -36,3 +36,15 @@ code {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+
+.hidden-h1 {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px); /* Visually hide but still in the DOM */
+  overflow: hidden;
+}
