--- a/pages/components/template1/css/Services.module.css
+++ b/pages/components/template1/css/Services.module.css
@@ -65,7 +65,7 @@
 /* Mobile responsiveness */
 @media (max-width: 768px) {
   .template1ServicesContainer {
-    flex-direction: column; /* Stacks items vertically on mobile */
+    /* flex-direction: column;  */
     align-items: center;
   }
 
